# wagtail-ai-image-generation

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
tests/: factories.py  settings.py  test_integration.py  test_models.py  test_providers.py  test_rate_limiting.py  test_storage.py  test_views.py  urls.py
wagtail_ai_images/: apps.py  exceptions.py  models.py  registry.py  storage.py  views.py  wagtail_hooks.py
wagtail_ai_images/providers/: azure_openai.py  base.py  custom.py  google.py  openai.py  stability.py
wagtail_ai_images/static/wagtail_ai_images/js/: generate.js
wagtail_ai_images/templates/wagtail_ai_images/: generate.html
