[project]
name = "wagtail-ai-images"
version = "0.1.0"
description = "A Wagtail plugin that lets admin users generate images from text prompts and save them directly into the Wagtail image library."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "wagtail>=6.0",
    "django>=5.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
google = ["google-auth>=2.0"]
all = ["openai>=1.0", "google-auth>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "openai>=1.0",
    "google-auth>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wagtail_ai_images"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["tests/test_*.py"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["wagtail_ai_images"]
omit = ["*/migrations/*"]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
]
